# DeepHunter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config.yaml  investigation_report.md  pyproject.toml  report_*.od1.vtiger.com.md  report_output.md  report_vtiger.com.md  requirements.txt  scope.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.mypy_cache/3.12/: cache.0.db  cache.0.db-shm  cache.0.db-wal  cache.1.db  cache.1.db-shm  cache.1.db-wal  cache.10.db  cache.10.db-shm  cache.10.db-wal  cache.11.db  cache.11.db-shm  cache.11.db-wal  cache.12.db  cache.12.db-shm  cache.12.db-wal  cache.13.db  cache.13.db-shm  cache.13.db-wal  cache.14.db  cache.14.db-shm  cache.14.db-wal  cache.15.db  cache.15.db-shm  cache.15.db-wal  cache.2.db  cache.2.db-shm  cache.2.db-wal  cache.3.db  cache.3.db-shm  cache.3.db-wal  cache.4.db  cache.4.db-shm  cache.4.db-wal  cache.5.db  cache.5.db-shm  cache.5.db-wal  cache.6.db  cache.6.db-shm  cache.6.db-wal  cache.7.db  (+8 more)
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATASET_SPEC.md  PROJECT.md  ROADMAP.md  agents-v1.md  context-prompt-v1.md  ingestion-v1.md  js-intel-v1.md  methodology-packs-v1.md  planning-v1.md  reasoning-v1.md  recon-v1.md  router-v1.md  sko-v1.md  tools-v1.md
src/deephunter/: __init__.py
src/deephunter/agents/: __init__.py  agent.py  base.py  context.py  dependency_graph.py  events.py  models.py  orchestrator.py  orchestrator_v2.py  registry.py  security_agents.py  strategies.py
src/deephunter/api/: __init__.py
src/deephunter/cli/: __init__.py  main.py
src/deephunter/context/: __init__.py  budget.py  config.py  engine.py  events.py  models.py  pipeline.py  sources.py
src/deephunter/core/: __init__.py  config.py  exceptions.py  types.py
src/deephunter/correlation/: __init__.py  engine.py  events.py
src/deephunter/dashboard/: __init__.py  models.py  service.py
src/deephunter/di/: __init__.py
src/deephunter/evaluation/: __init__.py  ci.py  leaderboard.py  metrics.py  models.py  providers.py  reporter.py  runner.py  scoring.py
tests/: conftest.py  test_agents.py  test_cli.py  test_core_config.py  test_core_types.py  test_evaluation.py  test_ingestion.py  test_knowledge_models.py  test_knowledge_store.py  test_parsers.py  test_rag.py  test_reasoning.py  test_training.py  test_utils.py
tests/integration/: test_cli.py  test_end_to_end.py  test_ingestion.py  test_ingestion_v2.py  test_investigation_workflow.py  test_rag.py  test_reasoning.py  test_training.py
tests/unit/: test_agents.py  test_agents_v2.py  test_app_benchmarks.py  test_bug_bounty_workflows.py  test_context_budget.py  test_context_engine.py  test_context_events.py  test_context_models.py  test_context_pipeline.py  test_context_sources.py  test_core_config.py  test_core_types.py  test_dashboard.py  test_evaluation.py  test_ingestion_dedup.py  test_ingestion_discovery.py  test_ingestion_events.py  test_ingestion_extractor.py  test_ingestion_normalizer.py  test_ingestion_pipeline.py  test_ingestion_validator.py  test_integrations.py  test_intel_adapters.py  test_intel_correlation.py  test_intel_framework.py  test_intel_hints.py  test_intel_models.py  test_intel_tech.py  test_investigation_evidence.py  test_investigation_models.py  test_investigation_orchestrator_extensions.py  test_investigation_profiles.py  test_investigation_report.py  test_investigation_workflow.py  test_js_intel_adapter.py  test_js_intel_engine.py  test_js_intel_graph.py  test_js_intel_models.py  test_js_intel_parser.py  test_knowledge_json_store.py  (+52 more)
workflows/: api_review.yaml  cloud_review.yaml  graphql_review.yaml  mobile_review.yaml  web_app_review.yaml
(+335 files in other folders)
