[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "deephunter"
version = "0.2.0-dev"
description = "Modular AI-assisted bug bounty research platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "DeepHunter Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "markdown>=3.5",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
pdf = ["pypdf2>=3.0"]
rag = ["numpy>=1.26"]
sentence = ["sentence-transformers>=3.0"]
openai = ["openai>=1.0"]
ollama = ["httpx>=0.27"]
web = ["fastapi>=0.100", "uvicorn>=0.23"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pre-commit>=3.0",
]
full = [
    "deephunter[pdf]",
    "deephunter[rag]",
    "deephunter[sentence]",
    "deephunter[web]",
    "deephunter[dev]",
]

[project.urls]
Homepage = "https://github.com/anomalyco/opencode"
Documentation = "https://github.com/anomalyco/deephunter"
Repository = "https://github.com/anomalyco/deephunter"
Issues = "https://github.com/anomalyco/deephunter/issues"

[project.scripts]
deephunter = "deephunter.cli.main:cli"

[tool.hatch.build]
packages = ["src/deephunter"]

[tool.hatch.build.targets.wheel]
packages = ["src/deephunter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --ignore=tests/benchmarks"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false